client/src/components/Index/dashboard.css
.dashboardContainer {
	display: grid;
	grid-template-columns: 1fr 4fr;
	grid-template-rows: 1fr;
	height: 100vh;
	width: 100vw;
}

.sideBarContainer {
	border-right: 1px solid white;
	background-color: #202020;
	height: 100%;
	display: flex;
	flex-direction: column;
}
.topRowContainer {
	height: 5%;
	width: 100%;
	background-color: #202020;
	border-bottom: 1px solid white;
	display: flex;
	justify-content: space-between;
	align-items: center;
}
.topRowContainer > button {
	display: flex;
	justify-content: center;
	align-items: center;
	width: 15%;
}

.conversationContainer {
	height: 100%;
	width: 100%;
	display: flex;
	flex-direction: column;
}

.conversationtopRowContainer {
	height: 5%;
	width: 100%;
	background-color: #202020;
	display: flex;
	justify-content: space-between;
	align-items: center;
	border-bottom: 1px solid white;
}
.conversationContentContainer {
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
	display: flex;
	flex-direction: column;
	min-height: 90%;
	max-height: 90%;
	overflow-y: auto;
}

.messageInputContainer {
	height: 5%;
	width: 100%;
	display: flex;
	justify-content: center;
	align-items: center;
	border-top: 1px solid white;
	background-color: #202020;
}
.conversationParticipantsNames > span {
	margin-right: 1rem;
}

.singleConversationContainer {
	height: 7.5%;
	width: 100%;
	background-color: #202020;
	border-bottom: 1px solid rgba(255, 255, 255, 0.124);
	display: flex;
	justify-content: flex-start;
	align-items: center;
}

.conversationTitle {
	font-weight: bold;
	font-size: 1.2rem;
	text-decoration: underline;
	margin-left: 2rem;
}

.conversationTitle:hover {
	cursor: pointer;
}

.messageCard {
	max-width: 50%;
	width: 25%;
	height: auto;
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: flex-start;
	background-color: #202020;
	border: 1px solid white;
	border-radius: 10px;
	margin: 0.5rem;
	padding: 0.5rem;
}

.messageCard.currentUserMessage {
	align-self: flex-end;
}

.messageCard.otherUserMessage {
	align-self: flex-start;
	background-color: #3a3a3a;
}
.messageCard .messageUsername {
	margin-left: 1rem;
	margin-bottom: 1rem;
	text-decoration: underline;
	font-weight: bold;
}
.messageCard .message {
	margin-left: 1rem;
}

.messageCard .messageTimestamp {
	margin-left: 1rem;
	margin-top: 1rem;
	font-size: 0.8rem;
	color: rgba(255, 255, 255, 0.635);
}

